--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -14,6 +14,8 @@
     background-position-x: -1%;
     background-position-y: 5%;
     background-color: var(--dark);
+    border: 3px solid var(--light-red);
+    box-shadow: .5rem .5rem 1rem .5rem var(--light-red);
 }
 
 .avatar {
