--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -3,13 +3,50 @@
     --light: #F9F3F1;
     --light-red: #800C07;
     --dark-red: #76230E;
-    --black: black;
+    --black: rgb(5, 5, 5);
+}
+
+.carrot {
+    font-weight: bolder;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+}
+
+.curly {
+    height: 100%;
+    transform: scale(4);
+    padding: 1rem;
+}
+
+.blur {
+    position: absolute;
+    box-shadow: 0 0 1000px 50px var(--light-red);
+    z-index: -100;
+}
+
+.blur1 {
+    top: 40rem;
+    left: 20rem;
+}
+
+.blur2 {
+    top: 20rem;
+    right: 10rem;
+    box-shadow: 0 100px 1000px 100px var(--light-red);
+}
+
+.blur3 {
+    top: 0;
+    left: 40%;
+    box-shadow: 0 100px 1000px 70px var(--light-red);
 }
 
 .content {
     padding-top: 13rem;
     display: flex;
-    max-width: 80%;
     align-items: center;
     justify-content: space-around;
     height: 100%;
@@ -18,7 +55,15 @@
 .introText {
     color: var(--light);
     font-size: 2.1rem;
-    z-index: 10000;
+    padding: 1rem;
+}
+
+.text {
+    padding: 2rem;
+}
+
+.typewriter {
+    color: var(--dark-red);
 }
 
 .name {
@@ -29,21 +74,19 @@
     padding-right: .7rem;
 }
 
-.itachi {
-    background-image: url('../assests/itachi.jpg');
-    background-size: 70rem;
-    height: 20rem;
-    width: 20rem;
-    border-radius: 50%;
-    background-position-x: -1%;
-    background-position-y: 5%;
+.memoji {
+    background-image: url('../assests/images/memoji.png');
+    width: 100%;
+    aspect-ratio: 1;
+    background-size: cover;
     background-color: var(--dark);
-    border: 3px solid var(--light-red);
-    box-shadow: .5rem .5rem 1rem .5rem var(--light-red);
 }
 
 .avatar {
-    height: 100px;
-    width: 100px;
+    border: 3px solid var(--light-red);
+    box-shadow: .5rem .5rem 1rem .5rem var(--light-red);
+    height: 20rem;
+    width: 20rem;
+    overflow: hidden;
     border-radius: 50%;
 }
