--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,18 +1,22 @@
 .footer {
+    max-width: 90%;
+}
+
+.footerCont {
     padding-top: 10rem;
     display: flex;
-    width: 100%;
+    width: 90%;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-around; 
     padding-bottom: 1rem;
 }
 
-.footer li {
+.footerCont li {
     padding-left: 1rem;
     padding-right: 1rem;
 }
 
-.footer li a {
+.footerCont li a {
     font-size: 1.7rem;
     padding: 2rem;
 }
