--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -6,13 +6,35 @@
     justify-content: center;
 }
 
+.ProjCont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .Project {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 1rem;
+    width: 100%;
+}
+
+.Img {
+    width: 100%;
+    height: 100%;
+}
+
+img{
+    width: 100%;
+    height: 100%;
 }
 
 .ProjDetails {
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: space-around;
     padding: 1rem;
 }
