--- a/src/Navigation/Navigation.css
+++ b/src/Navigation/Navigation.css
@@ -10,6 +10,13 @@ a {
     color: var(--light);
 }
 
+.psuedoName {
+    font-size: 1.4rem;
+    color: var(--dark-red);
+    padding-right: 4rem;
+    margin-left: -5rem;
+}
+
 li a {
     position: relative;
     margin: 0 10px;
